# OmoriCZ

./: .clang-format  .gitignore  .gitmodules  01_cutscenes_neighbors.yaml  02_cutscenes_hideandseek.yaml  02_map_neighborsroom.yaml  03_cutscenes_basil.yaml  ALBUM.yaml  Bestiary.yaml  CMakeLists.txt  Omopatch.sln  README.md  XX_BLUE.yaml  XX_GENERAL.yaml  XX_ITEM_GET.yaml  basils_path.yaml  blackjack_minigame.yaml  dreamworld_npc_dialogue_forgottenpier.yaml  dreamworld_npc_dialogue_playground.yaml  gacha_minigame.yaml  hide_and_seek.yaml  menus.yaml  mod.json  omopatch.desktop  org.kde.omopatch.metainfo.xml  sidequest_dreamworld_flowerpuzzle.yaml  sidequest_dreamworld_jash.yaml  sidequest_farawaytown_hobbeezhighscore.yaml  sidequest_farawaytown_lostlucas.yaml  sidequest_farawaytown_toiletseat.yaml  xx_tombstones.yaml  základní dokument.docx
Omopatch/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Omopatch.csproj  Program.cs  app.manifest
Omopatch/Assets/: progress_bars.kra
Omopatch/Controls/: OmoriProgress.axaml  OmoriProgress.axaml.cs
Omopatch/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
Omopatch/Views/: MainWindow.axaml  MainWindow.axaml.cs
data/: Actors.json  Armors.json  Classes.json  CommonEvents.json  Enemies.json  Items.json  Map291.json  Map346.json  Skills.json  System.json  Weapons.json
grafika na překlad/animations/: animace.docx
grafika na překlad/atlases/: atlases.docx
grafika na překlad/characters/: characters.docx
grafika na překlad/system/: system.docx
grafika na překlad/tilesets/: tilesets.docx
img/atlases/: MN_PizzaItems.kra
js/: Custom Battle Action Text.js  GTP_OmoriFixes.js  Omori BASE.js  Omori BlackLetterMap.js  Omori Name Input.js  Omori Save & Load.js  mrb.js  plugins.js  sc_fix.js
languages/en/: 01_cutscenes_neighbors.yaml  01_map_whitespace.yaml  02_cutscenes_lostball.yaml  02_map_neighborsroom.yaml  03_cutscenes_basil.yaml  04_cutscenes_blackletters.yaml  05_cutscenes_spaceboyfriend.yaml  06_cutscenes_junkyard.yaml  07_cutscenes_spaceexboyfriend.yaml  08_cutscenes_captspaceboy.yaml  09_cutscenes_hobbeez.yaml  10_cutscenes_fakeknifefight.yaml  11_cutscenes_stolenalbum_pt1.yaml  12_cutscenes_stolenalbum_pt2.yaml  13_cutscenes_dinneratbasils.yaml  14_cutscenes_sweetheartquest.yaml  15_cutscenes_herothebachelor.yaml  16_cutscenes_thewedding.yaml  17_cutscenes_pollysworry.yaml  18_cutscenes_secretlake.yaml  19_cutscenes_kelshouse.yaml  20_cutscenes_sleepover.yaml  21_cutscenes_lastresort.yaml  22_cutscenes_humphrey.yaml  23_cutscenes_slimegirls.yaml  24_cutscenes_finalboss.yaml  25_cutscenes_blackhole.yaml  26_cutscenes_aubrey.yaml  27_cutscenes_treehouse.yaml  28_cutscenes_helpbasil.yaml  29_cutscenes_basilsplea.yaml  ALBUM.yaml  Bestiary.yaml  System.yaml  XX_BLUE.yaml  XX_GENERAL.yaml  XX_MARI_LOCATIONS.yaml  XX_MELON.yaml  XX_OCEAN.yaml  XX_QUEST.yaml  (+146 more)
src/: CMakeLists.txt  fadeoverlay.cpp  fadeoverlay.h  installer.cpp  installer.h  main.cpp  omoributton.cpp  omoributton.h  omoricard.cpp  omoricard.h  omoriprogressbar.cpp  omoriprogressbar.h  omoriradio.cpp  omoriradio.h  optionsmessagecard.cpp  optionsmessagecard.h
src/contents/ui/: Main.qml
src/contents/ui/controls/: Button.qml  Card.qml  CardBackground.qml  Label.qml  ProgressBar.qml  Radio.qml
verze/-0.0.1/1993/: mod.json
verze/-0.0.1/1993/languages/en/: 01_cutscenes_neighbors.yaml  02_cutscenes_lostball.yaml  System.yaml  XX_BLUE.yaml  XX_MELON.yaml  XX_SKILL_GET.yaml  XX_SYSTEM.yaml  dreamworld_extras_pyrefly.yaml  dreamworld_npc_dialogue_playground.yaml  dreamworld_npc_dialogue_whitespace.yaml  hide_and_seek.yaml  sidequest_dreamworld_mush.yaml  sidequest_dreamworld_peanutjelly.yaml  sidequest_dreamworld_stargazing.yaml  sidequest_farawaytown_brushteeth.yaml  sidequest_farawaytown_flower.yaml  sidequest_farawaytown_jackson.yaml  slot_machine_minigame.yaml  wtf.yaml
